# eurostat_tsv2csv

./: README.md  eurostat.sh  eurostat2csv.py  eurostat_get_tsv.py  eurostat_tsv2csv.py  pyproject.toml
src/eurostat2csv/: __main__.py  args.py  download_inventory.py  eurostat_get_tsv.py  eurostat_tsv2csv.py  read_inventory_data.py  read_invnetory.py
